--- a/RealmLoginKit Apple/RealmLoginKitExample-iOS/Resources/Main.storyboard
+++ b/RealmLoginKit Apple/RealmLoginKitExample-iOS/Resources/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Realm LoginKit-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RealmLoginKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RealmLoginKitExample_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTM-43-SWx" customClass="RealmLogoView" customModule="RealmLoginKit" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTM-43-SWx" customClass="RealmLogoView" customModule="RealmLoginKitExample_iOS" customModuleProvider="target">
                                 <rect key="frame" x="66" y="212" width="242" height="242"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -37,7 +37,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofu-Mv-3wI">
-                                <rect key="frame" x="37.5" y="588" width="300" height="34"/>
+                                <rect key="frame" x="38" y="608" width="300" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="YBX-6N-wRC"/>
                                     <constraint firstAttribute="height" constant="34" id="c7p-cr-ejw"/>
