--- a/RealmLoginKit Android/app/src/main/res/values/styles.xml
+++ b/RealmLoginKit Android/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="DummyAppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="DummyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
 
 </resources>
